[package]
name = "iai"
version = "0.1.1"
authors = ["Brook Heisler <redattack34@gmail.com>"]
edition = "2018"

description = "One-shot benchmarking library"
repository = "https://github.com/bheisler/iai"
readme = "README.md"
keywords = ["iai", "benchmark"]
categories = ["development-tools::profiling"]
license = "Apache-2.0/MIT"

[dependencies]
cfg-if = "1.0"
iai_macro = { version = "0.1.0", path = "macro", optional = true }
profile = { path = "./profile", version = "0.0.0" }

[features]
real_blackbox = []
macro = ["iai_macro"]
default = []

[[bench]]
name = "test_regular_bench"
harness = false
