[package]
name = "iai_macro"
version = "0.1.1"
authors = ["Brook Heisler <redattack34@gmail.com>"]
edition = "2018"

description = "Custom Test Framework macro for Iai"
repository = "https://github.com/bheisler/iai"
readme = "README.md"
keywords = ["iai", "benchmark", "macro"]
categories = ["development-tools::profiling"]
license = "Apache-2.0/MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
quote = "1.0"

[dev-dependencies]
iai = { version = "0.1.1", path = "..", default-features = false, features = ["macro"] }

[[bench]]
name = "test_macro_bench"

[workspace]